--- a/package.json
+++ b/package.json
@@ -13,18 +13,11 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1121.0",
-    "bcrypt": "^5.0.1",
     "busboy": "^1.6.0",
     "config": "^3.3.7",
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
-    "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
-    "morgan": "~1.9.1",
-    "swagger-ui-express": "^4.1.6"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
